changes of trello 02-11-20

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -648,27 +648,326 @@
 		"Prescriptionisdeleted" : "处方被删除",
 		"Prescriptionisarchived" : "处方已存档",
 		"Prescriptionishandedtopatient" : "处方交给病人",
-		"Addcompany" :"Add another insurance company",
-		"Selectentrytype" : "Select entry type",
-		"addtextentry" : "add text entry",
-		"BodySchemeNotes" :"Body Scheme Notes",
-		"Conditions" : "Condition (How are you?)",
-		"requesteddoctor" : "has requested to become a trusted doctor",
-		"accpetRemove" : "Please check this for accept and remove.",
-		"pain" : "Pain",
-		"Mild" : "Mild", 
-		"Moderate" : "Moderate", 
-		"Servere" : "Severe",
-		"RegisteredSuccessfully" : "Registered Successfully",
-		"Youregisteredsuccessfully" :"You are registered successfully",
-		"emailverification" : "Please check your email for verification",
-		"Allentries" : "All entries are by default visible to professionals you give access to your profile. You can edit these settings additionally on each entry or set a general rule in your",
-		"SelectPainArea" :"Select Pain Area",
-		"Temperature" :"Temperature",
-		"Fieldtitle" :"Field title",
-		"Download" :"Download",
-		"VeiwGraph" :"Veiw Graph",
-		"O2Saturation": "O2 Saturation",
-		"Whereyouarelocated" :"Where you are located"
+		"Addcompany" :"添加另一家保险公司",
+		"Selectentrytype" : "选择输入类型",
+		"addtextentry" : "添加文字输入",
+		"BodySchemeNotes" :"身体方案说明",
+		"Conditions" : "条件（你好吗？",
+		"requesteddoctor" : "要求成为一名值得信赖的医生",
+		"accpetRemove" : "请检查是否接受并删除",
+		"pain" : "疼痛",
+		"Mild" : "轻度", 
+		"Moderate" : "中等", 
+		"Servere" : "严重",
+		"RegisteredSuccessfully" : "注册成功",
+		"Youregisteredsuccessfully" :"您已成功注册",
+		"emailverification" : "请检查您的电子邮件以进行验证",
+		"Allentries" : "默认情况下，所有条目对您授予个人资料访问权限的专业人员都是可见的。您可以在每个条目上另外编辑这些设置，或者在",
+		"SelectPainArea" :"选择疼痛区域",
+		"Temperature" :"温度",
+		"Fieldtitle" :"栏位标题",
+		"Download" :"下载",
+		"VeiwGraph" :"查看图",
+		"O2Saturation": "氧气饱和度",
+		"Whereyouarelocated" :"您所在的位置",
+
+
+		"timeline":"时间轴",
+        "user":"用户",
+        "facility" :"设施",
+        "ICD_11":"ICD-11",
+        "ICD_10_Who":"ICD-10WHO",
+        "ICD_10_CM":"ICD-10CM",
+        "ICD_10_GM":"ICD-10GM",
+		"timeline_filters":"时间线过滤器",
+		"rate_this_course":"给课程评分",
+		"ok_and_close":"确定并关闭",
+		"save_and_cont":"保存并继续",
+        "clear_filters":"清除过滤器",
+        "health_profile":"健康档案",
+        "add_profile_pic":"添加个人资料图片",
+        "Creatinine":"肌酐",
+        "add_data":"+添加数据",
+        "no_document_avl":"没有可用的文档",
+		"search_by_type_dr":"按类型、医生或设施进行搜索",
+		"search_by_hos":"按医院名称或身份证进行搜索",
+        "search_or_enter":"搜索或输入",
+        "enter":"输入",
+        "added_by":"添加者",
+        "images_files":"图像和文件",
+        "pain_intensity":"疼痛强度",
+        "ICD_F32":"ICD:F32.0",
+        "filters":"过滤器",
+        "Hba1c":"Hba1c(%)",
+        "warst_p_p":"可能的痛苦",
+        "very_severy":"非常漂亮",
+        "moderate":"中等",
+        "no_pain":"没有痛苦",
+		"condition_h_r_u":"Condition(你好吗？)",
+		"how_are_you":"你好吗？",
+		"Enter_Diagnosis":"进入诊断",
+		"Problem":"问题",
+		"select_dates":"选择日期",
+        "hurts_a_lot":"很痛",
+        "symp_notes":"症状和注意事项",
+        "whereer_r_u_l":"你在哪里",
+        "confirm_diag":"确认诊断",
+        "travelled_to":"前往",
+        "date_fo_visit":"访问日期",
+		"name_of_doc":"医生姓名",
+		"add_picture":"+添加图片",
+		"loadingref":"正在加载。..",
+		"enter_date":"输入日期",
+		"lifelong":"终身",
+		"change_num":"收费编号",
+		"reminder_time":"提醒时间",
+		"add_another_remin":"添加另一个提醒",
+		"remove_reminder":"删除提醒",
+		"to_be_token":"直到成为代币",
+		"set_a_reminder":"设置提醒",
+		"select_date":"选择日期",
+		"select_time":"选择时间",
+		"add_attachment":"添加附件。.",
+		"dob_relative":"出生日期（相对的)",
+		"add_dob_relative":"添加死亡日期（相对)",
+		"hide_or_show":"显示或隐藏",
+		"set_date":"设置日期",
+		"continue":"继续",
+		"pending_conf":"等待确认",
+		"sent_requests":"已发送请求",
+		"sent_request":"已发送请求",
+		"new_inquiry":"新查询",
+		"profile_id_pin":"配置文件ID和密码",
+		"inquiry_again":"再次查询",
+		"graph_bp":"图表-血压",
+		"graph_bs":"图表-血糖",
+		"graph_hr":"图表-心率",
+		"graph_wb":"图表-体重和体重指数",
+		"my_docs":"我的文档",
+		"my_drs":"我的医生",
+		"remove_ftd":"从受信任的医生中删除",
+		"dismiss":"Dismiss",
+		"add_as_trusted":"添加为可信",
+		"add_successfully":"成功添加",
+		"block_chain":"区块链访问",
+		"terms":"条款",
+		"insurance_comp":"保险公司",
+		"insurance_num":"保险号码",
+		"street_address":"街道地址",
+		"privacy_policy":"隐私政策",
+		"aimedis_online_cour":"Aimedis在线课程",
+		"tracker_self":"追踪器和自我数据",
+		"settings":"设置",
+		"organ_doner":"器官捐献者",
+		"right_mgnt":"权限管理",
+		"additional_settings":"其他设置",
+		"blockchain_orgn_doner":"区块链安全器官捐赠者",
+		"serach_pers_sick":"搜索Prescrip。  生病证明(S)。",
+		"set_default_date_time":"设置默认的日期和时间格式",
+		"two_fac_auth_enable":"双因素身份验证已启用",
+		"disable_2_factor":"禁用双因素身份验证",
+		"enable_2_factor":"启用双重认证",
+		"appVersion":"应用程序版本1.0",
+		"aimedisInc":"Aimedis Inc.",
+		"do_want_disconn":"你想断开连接吗",
+		"tracker_data":"追踪器和自我数据",
+		"tracker_devices":"追踪器和设备",
+		"connected":"已连接",
+		"times":"times",
+		"last_on":"最后开始",
+		"welcome_back":"欢迎回来,",
+		"country_of_insu":"保险国家",
+		"details_fitbit":"Fitbit详细信息",
+		"health_status":"健康状况",
+		"contact_other":"联系方式和其他信息",
+		"no_medication":"没有药物",
+		"no_allergies":"没有过敏",
+		"no_diagnoses":"没有诊断",
+		"free_remarks":"免费评论",
+		"relation":"关系",
+		"Nurology":"Nurology",
+		"no_data_yet":"还没有数据",
+		"confirmed":"已确认",
+		"emergency_cont":"紧急联系",
+		"ent_medicat":"内部药物",
+		"heart_frequency":"心脏频率",
+		"graphs":"图表",
+		"consultancy":"咨询",
+		"online_appo":"在线预约",
+		"cancel_my_app":"取消我的约会",
+		"cancel_appoint":"取消预约",
+		"calender_view":"日历视图",
+		"past_appointments":"过去的约会",
+		"select_spec":"选择专业",
+		"appoint_type":"约会类型",
+		"select_a_specialist":"选择专家",
+		"we_are_near":"我们正在向您的专家展示",
+		"km_range":"公里范围",
+		"certificate":"证书",
+		"yes":"是",
+		"no":"No",
+		"cart":"购物车",
+		"pay":"支付",
+		"unable_to_update":"无法更新",
+		"enter_your_pass":"输入您的密码",
+		"payment_unsuccess":"付款失败",
+		"ordered_unsuccess":"Orderd成功。",
+		"ordered_cant":"订单还不能到位！",
+		"dont_have_acc":"没有账号？",
+		"type_a_msg":"输入消息。.",
+		"back_to_screen":"返回登录界面",
+		"verify_email":"请验证您的\nE-mail地址",
+		"aimedis_link":"如果有Aimedis账户链接到\n",
+		"email_reset":"电子邮件，我们会发送ninstructions来重置您的密码。",
+		"we_sent_email":"我们发送了一封验证邮件给\n",
+		"click_the_link":"。 点击\n电子邮件中的链接开始！",
+		"click_here":"点击这里",
+		"unable_open_please":"无法打开。 请手动打开",
+		"open_default":"打开默认的电子邮件应用程序",
+		"did_nt_get":"没有收到电子邮件验证？",
+		"lectures" :"讲座",
+		"book_v_call":"预订视频通话",
+		"book_o_visit":"图书办公室访问",
+		"book_consultancy":"图书咨询",
+		"select_time_from":"选择时间(从)",
+		"select_time_to":"选择时间(到)",
+		"detail_ques":"细节/问题",
+		"all":"全部",
+		"char_8":"8个字符",
+		"lettr_1":"1个字母",
+		"number_1":"1个数字",
+		"spl_char_1":"1个特殊字符",
+		"enter_mob_num":"输入手机号码",
+		"enter_msg":"输入信息",
+		"network_error":"网络错误",
+		"forgotten_pass":"忘记密码",
+		"choose_file":"选择文件",
+		"continue_watch":"继续观看",
+		"start_learning":"开始学习",
+		"remove_from_cart":"从购物车中移除",
+		"checkout":"结账",
+		"wishlist":"收藏",
+		"excellent":"优秀",
+		"very_good":"非常好",
+		"good":"好",
+		"fair":"公平",
+		"poor":"差",
+		"audio":"音频",
+		"blocked_users":"被阻止的用户",
+		"actions":"操作",
+		"sending":"发送",
+		"unblock":"取消阻止",
+		"contacts":"联系人",
+		"has_file":"给你发送了一个文件。 在这里下载: ",
+		"you_deleted":"您删除了这条信息",
+		"incoming_call":"来电",
+		"outgoing_call":"拨出电话",
+		"ok":"OK",
+		"english":"英语",
+		"german":"德语",
+		"swahili":"斯瓦希里语",
+		"your_rating":"您的评分",
+		"leave_rating":"留下评分",
+		"error_in_license":"许可证上传错误",
+		"call_by":"来电",
+		"call_initiated":"呼叫已启动",
+		"call_ongoing":"通话进行中",
+		"call_unanswered":"呼叫未应答",
+		"call_rejected":"呼叫被拒绝",
+		"call_busy":"通话忙",
+		"call_cancelled":"呼叫取消",
+		"call_ended":"通话结束",
+		"cant_chat":"现在无法聊天",
+		"heck_it_later":"我晚点再来",
+		"unable_retrive":"无法重试对话 ",
+		"you_just_sent":"只是你发送了一个 ",
+		"you_recieve":"您收到一个 ",
+		"call_is":"呼叫是",
+		"document":"Document",
+		"image":"图像",
+		"etc":"etc.",
+		"values":"价值观",
+		"added_in_cart":"已添加到购物车。",
+		"already_in_cart":"课程已经在您的购物车中。",
+		"click_here_upload":"点击此处上传许可证",
+		"not_now":"现在不行",
+		"reset_passwrd":"重置密码",
+		"register_new_acc":"注册新账户",
+		"you_r_blocked":"你被封锁了，请联系Aimedis团队",
+		"blocked":"封锁！",
+		"turn_on":"开启",
+		"login_suceess":"登录成功",
+		"select_acc_type":"选择账户类型",
+		"i_m_a":"我是一个",
+		"update_entry":"更新条目",
+		"notifications":"通知",
+		"something_wrong":"出事了",
+		"added_to_plist":"已添加到patientlist",
+		"please_select_rating":"请选择评分。",
+		"cancel_s_o":"取消第二次开放",
+		"enter_your_name":"输入你的名字",
+		"error_in_p_u":"聊天时配置文件更新出错",
+		"enter_your_email":"输入您的电子邮件地址",
+		"your_app_calender":"您在日历视图中的约会",
+		"no_time_slot":"这个日期没有时间段可用",
+		"going_offline":"存款、取款、设备离线",
+		"you_will_get":"当重要事件发生时，你会得到更新，比如",
+		"by_clicking":"通过创建帐户，我同意",
+		"term_of_use":"使用条款",
+		"two_days_ago":"2天前",
+		"three_to_6_days_ago":"3-6天前",
+		"updated_track":"已更新轨道",
+		"added_success":"添加成功。..",
+		"sick_cert_found":"找到病态证书数据",
+		"sick_cert_not_found":"找不到病态证书数据",
+		"pre_data_found":"找到处方数据",
+		"error_getting_token":"获取令牌时出错",
+		"error_in_track":"获取轨道时出错",
+		"pre_data_not_found":"找不到处方数据",
+		"sick_doc_found":"找到病假证书的医生数据",
+		"sick_doc_not_found":"找不到病假证书医生数据",
+		"pre_doc_found":"找到处方医生数据",
+		"pre_doc_not_found":"找不到处方医生数据",
+		"error_network_conn":"网络连接出错",
+		"select_aimedis_dr":"请选择Aimedis医生。",
+		"Dr_added_to_fav_list":"医生添加到收藏夹列表。",
+		"please_check_net_conn":"请检查网络连接",
+		"rating_added_to_course":"课程中添加了评分。",
+		"remove_to_wish":"课程删除到收藏列表。",
+		"added_to_wish":"添加到收藏列表。",
+		"remove_in_wishlist":"课程删除到收藏列表。",
+		"two_step_verification":"输入您的两步验证码",
+		"verification_code":"两步验证码",
+		"unavailable_2":"2FA不可用？",
+		"Remarks":"备注",
+		"remove_second_op":"删除第二个意见",
+		"not_an_organ":"不是器官捐献者",
+		"family_dr_added":"家庭医生已添加",
+		"plz_selct_pdf":"请仅选择pdf、jpg、png文件类型。",
+		"agree_on":"请同意我们的条款和条件",
+		"all_required":"所有字段是必需的。",
+		"password_up":"密码已更新",
+		"select_lang":"选择语言",
+		"exit_amedis":"退出Aimedis",
+		"want_to_exit":"你想退出吗？",
+		"fcm_msg_arr":"新的FCM消息到达了！",
+		"upload_a_photo":"上传医疗保险卡的照片",
+		"im_medical_prof":"我确认我是医疗专业人员。 我必须提供我的执业执照证明，我现在上传或稍后提供。 在我不提供证据之前，我无法与患者联系。",
+		"reset_pass":"输入您注册的电子邮件地址，我们将向您发送一个重置密码的链接。",
+		"specific_comments":"如果您对课程有具体的意见，请填写表格告诉我们。",
+		"decided_by_following":"是或否应由以下人员决定",
+		"not_allowed":"不，我不允许移植我的任何器官或组织",
+		"exclude_some":"是的，我允许接受以下器官/组织:",
+		"include_some":"是的，我只允许以下器官/组织这样做:",
+		"yes_to_all":"是的，在医生宣布我死亡后，我同意移植我的一个或多个器官/组织",
+		"first_last_hos":"第一和最后一天\nof医院就诊",
+		"archive_entry_q":"你真的想存档这个条目吗",
+		"remove_this":"你真的想删除这个？",
+		"cancel_this":"你真的要取消吗？",
+		"are_u_sure":"你确定要更新这个查询吗？",
+		"update_inquery":"更新查询",
+		"dearchive_entry_q":"你真的想取消存档这个条目吗",
+		"delete_for_msg":"你真的想删除这个条目吗？ 这意味着它将被永远删除",
+		"make_personilized_acc":"为了让您的帐户更加个性化，请添加您的个人资料照片。 它只对您和您的小组中的人员可见。"
 	}
 }
