--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -649,9 +649,28 @@
 		"Prescriptionisdeleted" : "Rezept wird gelöscht",
 		"Prescriptionisarchived" : "Rezept ist archiviert",
 		"Prescriptionishandedtopatient" : "Das Rezept wird dem Patienten ausgehändigt",
-		"Addcompany" :"Add another insurance company", 
-		"Selectentrytype" : "Select entry type",
-
+		"Addcompany" :"Fügen Sie eine weitere Versicherungsgesellschaft hinzu", 
+		"Selectentrytype" : "Eintragstyp auswählen",
+		"addtextentry" : "Texteingabe hinzufügen",
+		"BodySchemeNotes" :"Body Scheme Notes",
+		"Conditions" : "Zustand (Wie geht es dir?)",
+		"requesteddoctor" : "hat darum gebeten, ein vertrauenswürdiger Arzt zu werden",
+		"accpetRemove" : "Bitte überprüfen Sie dies auf Akzeptieren und Entfernen.",
+		"pain" : "Schmerzen",
+		"Mild" : "Leicht", 
+		"Moderate" : "Mäßig", 
+		"Servere" : "Stark",
+		"RegisteredSuccessfully" : "Erfolgreich registriert",
+		"Youregisteredsuccessfully" :"Sie sind erfolgreich registriert",
+		"emailverification" : "Bitte überprüfen Sie Ihre E-Mails zur Bestätigung",
+		"Allentries" : "Alle Einträge sind standardmäßig für Fachleute sichtbar, denen Sie Zugriff auf Ihr Profil gewähren. Sie können diese Einstellungen bei jedem Eintrag zusätzlich bearbeiten oder eine allgemeine Regel in Ihrem festlegen",
+		"SelectPainArea" :"Wählen Sie Schmerzbereich",
+		"Temperature" :"Temperatur",
+		"Fieldtitle" :"Feldtitel",
+		"Download" :"Herunterladen",
+		"VeiwGraph" :"Diagramm anzeigen",
+		"O2Saturation": "O2-Sättigung",
+		"Whereyouarelocated" :"Wo Sie sich befinden",
 
 		"timeline" : "Journal",
         "user" : "Nutzer",
