--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -648,27 +648,326 @@
 		"Prescriptionisdeleted" : "Рецепт удален",
 		"Prescriptionisarchived" : "Рецепт в архиве",
     "Prescriptionishandedtopatient" : "Рецепт выдается пациенту",
-    "Addcompany" :"Add another insurance company", 
-    "Selectentrytype" : "Select entry type",
-    "addtextentry" : "add text entry",
-		"BodySchemeNotes" :"Body Scheme Notes",
-		"Conditions" : "Condition (How are you?)",
-		"requesteddoctor" : "has requested to become a trusted doctor",
-		"accpetRemove" : "Please check this for accept and remove.",
-		"pain" : "Pain",
-		"Mild" : "Mild", 
-		"Moderate" : "Moderate", 
-		"Servere" : "Severe",
-		"RegisteredSuccessfully" : "Registered Successfully",
-		"Youregisteredsuccessfully" :"You are registered successfully",
-		"emailverification" : "Please check your email for verification",
-		"Allentries" : "All entries are by default visible to professionals you give access to your profile. You can edit these settings additionally on each entry or set a general rule in your",
-		"SelectPainArea" :"Select Pain Area",
-		"Temperature" :"Temperature",
-		"Fieldtitle" :"Field title",
-		"Download" :"Download",
-		"VeiwGraph" :"Veiw Graph",
-		"O2Saturation": "O2 Saturation",
-		"Whereyouarelocated" :"Where you are located"
+    "Addcompany" :"Добавить еще одну страховую компанию", 
+    "Selectentrytype" : "Выберите тип записи",
+    "addtextentry" : "добавить текстовую запись",
+		"BodySchemeNotes" :"Примечания к схеме тела",
+		"Conditions" : "Состояние (Как дела?)",
+		"requesteddoctor" : "попросил стать доверенным врачом",
+		"accpetRemove" : "Пожалуйста, проверьте это для принятия и удаления.",
+		"pain" : "Боль",
+		"Mild" : "Незначительный", 
+		"Moderate" : "Умеренный", 
+		"Servere" : "Тяжелая форма",
+		"RegisteredSuccessfully" : "Registrado correctamente",
+		"Youregisteredsuccessfully" :"Успешно зарегистрирован",
+		"emailverification" : "Пожалуйста, проверьте свою электронную почту для подтверждения",
+		"Allentries" : "Все записи по умолчанию видны профессионалам, которым вы предоставили доступ к своему профилю. Вы можете редактировать эти настройки дополнительно для каждой записи или установить общее правило в своем",
+		"SelectPainArea" :"Выберите область боли",
+		"Temperature" :"Температура",
+		"Fieldtitle" :"Название поля",
+		"Download" :"Скачать",
+		"VeiwGraph" :"Посмотреть график",
+		"O2Saturation": "Насыщение O2",
+    "Whereyouarelocated" :"Где вы находитесь",
+    
+    
+    "timeline": "Лента новостей",
+    "user": "Пользователь",
+    "facility": "Объект",
+    "ICD_11": "МКБ-11",
+    "ICD_10_Who": "МКБ-10 ВОЗ",
+    "ICD_10_CM": "МКБ-10 КМ",
+    "ICD_10_GM": "МКБ-10 ГМ",
+    "timeline_filters": "Фильтр ленты новостей",
+    "rate_this_course": "Оцените этот курс",
+    "ok_and_close": "Принять и закрыть",
+    "save_and_cont": "Сохранить и продолжить",
+    "clear_filters": "Очистить фильтры",
+    "health_profile": "Профиль здоровья",
+    "add_profile_pic": "Добавить фотографию профиля",
+    "Creatinine": "Креатинин",
+    "add_data": "+Добавить данные",
+    "no_document_avl": "Нет доступных документов",
+    "search_by_type_dr": "Поиск по типу, врачу или объекту",
+    "search_by_hos": "Поиск по имени или ID",
+    "search_or_enter": "Используйте поиск или введите значение",
+    "enter": "Ввести",
+    "added_by": "Добавлено",
+    "images_files": "Файлы и изображения",
+    "pain_intensity": "Интенсивность боли",
+    "ICD_F32": "МКБ: F32.0",
+    "filters": "Фильтры",
+    "Hba1c": "Показатель HbA1c(%)",
+    "warst_p_p": "Возможна боль в пояснице",
+    "very_severy": "Очень сильная",
+    "moderate": "Умеренная",
+    "no_pain": "Нет боли",
+    "condition_h_r_u": "Состояние (самочувствие)",
+    "how_are_you": "Как вы себя чувствуете",
+    "Enter_Diagnosis": "Введите диагноз",
+    "Problem": "Проблема",
+    "select_dates": "Выбреть даны",
+    "hurts_a_lot": "Очень больно",
+    "symp_notes": "Симптомы и примечания",
+    "where_r_u_l": "Где вы находитесь",
+    "confirm_diag": "Подтвердите диагноз",
+    "travelled_to": "Была поездка в",
+    "date_fo_visit": "Дата рождения",
+    "name_of_doc": "Имя врача",
+    "add_picture": "+Добавить картинку",
+    "loadingref": "загрузка...",
+    "enter_date": "Введите дату",
+    "lifelong": "Пожизненно",
+    "change_num": "Номер списания",
+    "reminder_time": "Время напоминания",
+    "add_another_remin": "добавить еще одно напоминание",
+    "remove_reminder": "удалить напоминание",
+    "to_be_token": "Принимать до",
+    "set_a_reminder": "Установить напоминание",
+    "select_date": "Выбрать дату",
+    "select_time": "Выбрать временной интервал",
+    "add_attachment": "Добавить вложение..",
+    "dob_relative": "Дата рождения (родственник)",
+    "add_dob_relative": "Добавить дату смерти (родственника)",
+    "hide_or_show": "Показать или скрыть",
+    "set_date": "Выбрать дату",
+    "continue": "Продолжить",
+    "pending_conf": "Ожидание подтверждения",
+    "sent_requests": "Отправленные запросы",
+    "sent_request": "Запрос отправлен",
+    "new_inquiry": "Новый запрос",
+    "profile_id_pin": "ID и PIN-код профиля",
+    "inquiry_again": "Новый запрос",
+    "graph_bp": "Кровяное давление",
+    "graph_bs": "Сахар в крови",
+    "graph_hr": "Частота сердцебиения",
+    "graph_wb": "Шкала веса и ИМТ",
+    "my_docs": "Мои документы",
+    "my_drs": "Мои врачи",
+    "remove_ftd": "Удалить доверенного врача",
+    "dismiss": "Пропустить",
+    "add_as_trusted": "Добавить в качестве доверенного лица",
+    "add_successfully": "Успешно добавлен",
+    "block_chain": "Доступ к блокчейну",
+    "terms": "Условия",
+    "insurance_comp": "Страховая компания",
+    "insurance_num": "Страховой номер",
+    "street_address": "Точный адрес",
+    "privacy_policy": "Политика конфиденциальности Aimedis",
+    "aimedis_online_cour": "Онлайн-курсы",
+    "tracker_self": "Трекеры и данные о себе",
+    "settings": "Настройки",
+    "organ_doner": "Донор органа",
+    "right_mgnt": "Управление правами",
+    "additional_settings": "Дополнительные параметры",
+    "blockchain_orgn_doner": "Безопасное донорство с помощью блокчейна",
+    "serach_pers_sick": "Поиск рецептов и больничных листов",
+    "set_default_date_time": "Установить формат даты и времени по умолчанию",
+    "two_fac_auth_enable": "Двухфакторная аутентификация включена",
+    "disable_2_factor": "Отключить двухфакторную аутентификацию",
+    "enable_2_factor": "Включить двухфакторную аутентификацию",
+    "appVersion": "Версия приложения 1.0",
+    "aimedisInc": "Aimedis Inc.",
+    "do_want_disconn": "Вы хотите отключиться",
+    "tracker_data": "Трекеры и данные о себе",
+    "tracker_devices": "Трекеры и устройства",
+    "connected": "Подключено",
+    "times": "раз",
+    "last_on": "Последний раз в",
+    "welcome_back": "С возвращением,",
+    "country_of_insu": "Страна страхования",
+    "details_fitbit": "Информация о Fitbit",
+    "health_status": "Состояние здоровья",
+    "contact_other": "Контакты и другая информация",
+    "no_medication": "Нет лекарств",
+    "no_allergies": "Нет аллергии",
+    "no_diagnoses": "Нет диагнозов",
+    "free_remarks": "Обычные комментарии",
+    "relation": "Отношение",
+    "nurology": "Неврология",
+    "no_data_yet": "Данных пока нет",
+    "confirmed": "Подтверждено",
+    "emergency_cont": "Экстренный Контакт",
+    "ent_medicat": "Для приема внутрь",
+    "heart_frequency": "Частота сердечных сокращений",
+    "graphs": "Графики",
+    "consultancy": "Консультации",
+    "online_appo": "Онлайн-прием",
+    "cancel_my_app": "Отменить мои записи",
+    "cancel_appoint": "Отменить записи",
+    "calender_view": "Показывать календарь",
+    "past_appointments": "Прошлые записи",
+    "select_spec": "Выбрать специальность",
+    "appoint_type": "Тип записи",
+    "select_a_specialist": "Выбрать специалиста",
+    "we_are_near": "Мы показываем специалистов неподалеку",
+    "km_range": "радиус в км",
+    "certificate": "Сертификация",
+    "yes": "Да",
+    "no": "Нет",
+    "cart": "Корзина",
+    "pay": "Оплатить",
+    "unable_to_update": "Не удается обновить",
+    "enter_your_pass": "Введите пароль",
+    "payment_unsuccess": "Ошибка оплаты",
+    "ordered_unsuccess": "Заказ оформлен.",
+    "ordered_cant": "Невозможно разместить заказ!",
+    "dont_have_acc": "У вас еще нет профиля?",
+    "type_a_msg": "Введите сообщение...",
+    "back_to_screen": "Вернуться к экрану входа в систему",
+    "verify_email": "Пожалуйста, подтвердите свой \nэлектронный адрес",
+    "aimedis_link": "Если у вас есть учетная запись Aimedis, привязанная\n",
+    "email_reset": "к адресу почты, мы направим вам \nинструкции по сбросу пароля.",
+    "we_sent_email": "Мы отправили письмо на ваш электронный адрес\n",
+    "click_the_link": ". Нажмите на ссылку в\n письме, чтобы приступить к работе!",
+    "click_here": "Нажмите здесь",
+    "unable_open_please": "Невозможно открыть. Пожалуйста, откройте вручную",
+    "open_default": "Открыть приложение для электронной почты по умолчанию",
+    "did_nt_get": "Не получили подтверждение по электронной почте?",
+    "lectures": "лекции",
+    "book_v_call": "Запланировать видеозвонок",
+    "book_o_visit": "Запланировать посещение офиса",
+    "book_consultancy": "Запланировать консультацию",
+    "select_time_from": "Выберите время (с)",
+    "select_time_to": "Выберите время (по)",
+    "detail_ques": "Подробности или вопросы",
+    "all": "Все",
+    "char_8": "8 символов",
+    "lettr_1": "1 буква",
+    "number_1": "1 цифра",
+    "spl_char_1": "1 специальный символ",
+    "enter_mob_num": "Введите номер мобильного телефона",
+    "enter_msg": "Введите сообщение",
+    "network_error": "Ошибка сети",
+    "forgotten_pass": "Забыли пароль",
+    "choose_file": "Выбрать файл",
+    "continue_watch": "Продолжайте смотреть",
+    "start_learning": "Начать обучение",
+    "remove_from_cart": "Убрать из корзины",
+    "checkout": "Оплата",
+    "wishlist": "Список желаний",
+    "excellent": "Отлично",
+    "very_good": "Очень хорошо",
+    "good": "Хорошо",
+    "fair": "Нормально",
+    "poor": "Плохо",
+    "audio": "Аудио",
+    "blocked_users": "Заблокированные пользователи",
+    "actions": "Действия",
+    "sending": "ОТПРАВИТЬ",
+    "unblock": "Разблокировать",
+    "contacts": "Контакты",
+    "has_file": " отправил(-а) вам файл. Вы можете скачать его здесь: ",
+    "you_deleted": "Вы удалили это сообщение",
+    "incoming_call": "Входящий звонок",
+    "outgoing_call": "Исходящий звонок",
+    "ok": "ОК",
+    "english": "Английский",
+    "german": "Немецкий",
+    "swahili": "Суахили",
+    "your_rating": "Ваш рейтинг",
+    "leave_rating": "Оставить рейтинг",
+    "error_in_license": "Ошибка при загрузке лицензии",
+    "call_by": "позвонить по",
+    "call_initiated": "Вызов инициирован",
+    "call_ongoing": "Вызов продолжается",
+    "call_unanswered": "Вызов без ответа",
+    "call_rejected": "Вызов отклонен",
+    "call_busy": "Линия занята",
+    "call_cancelled": "Вызов отменен",
+    "call_ended": "Вызов завершен",
+    "cant_chat": "не могу ответить сейчас",
+    "heck_it_later": "я разберусь с этим позже",
+    "unable_retrive": "Не удалось восстановить разговор ",
+    "you_just_sent": "Только что отправил вам ",
+    "you_recieve": "Вы получили ",
+    "call_is": "Звонок",
+    "document": "Документ",
+    "image": "Изображение",
+    "etc": "и т.д.",
+    "values": "Значения",
+    "added_in_cart": "Добавлено в корзину.",
+    "already_in_cart": "Курс уже в вашей корзине.",
+    "click_here_upload": "Нажмите здесь, чтобы загрузить лицензию",
+    "not_now": "Не сейчас",
+    "reset_passwrd": "Сброс пароля",
+    "register_new_acc": "Зарегистрировать новый аккаунт",
+    "you_r_blocked": "Вы заблокированы, пожалуйста, обратитесь в Aimedis ",
+    "blocked": "Блокировка!",
+    "turn_on": "Включить",
+    "login_suceess": "Успешный вход в систему",
+    "select_acc_type": "Выберите тип профиля",
+    "i_m_a": "Я",
+    "update_entry": "Обновить запись",
+    "notifications": "Уведомления",
+    "something_wrong": "Что-то пошло не так",
+    "added_to_plist": "Добавлен(-а) в список пациентов",
+    "please_select_rating": "Пожалуйста, выберите рейтинг.",
+    "cancel_s_o": "Отмена второго мнения",
+    "enter_your_name": "Введите свое имя",
+    "error_in_p_u": "Ошибка при обновлении профиля в чате",
+    "enter_your_email": "Введите свой адрес электронной почты",
+    "your_app_calender": "Показать ваши записи в календаре",
+    "no_time_slot": "Для этой даты нет свободных слотов",
+    "going_offline": "пополнения, снятия, выход из сети",
+    "you_will_get": "Вы будете получать обновления каждый раз, когда происходят важные события, такие как",
+    "by_clicking": "Создавая учетную запись, я принимаю",
+    "term_of_use": " Условия использования",
+    "two_days_ago": "2 дня назад",
+    "three_to_6_days_ago": "3-6 дней назад",
+    "updated_track": "Обновленные данные",
+    "added_success": "Успешно добавлено...",
+    "sick_cert_found": "Найдены данные больничного листа",
+    "sick_cert_not_found": "Данные больничного листа не найдены",
+    "pre_data_found": "Найдены данные рецепта",
+    "error_getting_token": "Ошибка получения токена",
+    "error_in_track": "Ошибка получения трека",
+    "pre_data_not_found": "Данные рецепта не найдены",
+    "sick_doc_found": "Найдены данные больничного листа и врача",
+    "sick_doc_not_found": "Данные больничного листа и врача не найдены",
+    "pre_doc_found": "Найдены данные рецепта и врача",
+    "pre_doc_not_found": "Данные рецепта и врача не найдены",
+    "error_network_conn": "Ошибка сетевого подключения",
+    "select_aimedis_dr": "Пожалуйста, выберите врача Aimedis.",
+    "Dr_added_to_fav_list": "Доктор добавлен в список избранных.",
+    "please_check_net_conn": "Пожалуйста, проверьте подключение к сети",
+    "rating_added_to_course": "Вы поставили оценку курсу.",
+    "remove_to_wish": "Курс удален из списка желаний.",
+    "added_to_wish": "Добавлен в список желаний.",
+    "remove_in_wishlist": "Курс удален из списка желаний.",
+    "two_step_verification": "Введите код двухфакторной авторизации",
+    "verification_code": "Проверочный код двухфакторной авторизации",
+    "unavailable_2": "Нет доступа к кодам  двухфакторной авторизации?",
+    "Remarks": "Примечания",
+    "remove_second_op": "Второе мнение",
+    "not_an_organ": "Не является донором органов",
+    "family_dr_added": "Семейный врач добавлен",
+    "plz_selct_pdf": "Пожалуйста, выбирайте файлы форматов PDF, JPG, PNG.",
+    "agree_on": "Пожалуйста, примите наши Правила и условия",
+    "all_required": "Все поля являются обязательными.",
+    "password_up": "Пароль обновлен",
+    "select_lang": "Выбрать язык",
+    "exit_amedis": "Выйти из Aimedis",
+    "want_to_exit": "Вы хотите удалить документ?",
+    "fcm_msg_arr": "Пришло новое сообщение ПЦМ!",
+    "upload_a_photo": "Загрузите копию вашего удостоверения личности",
+    "im_medical_prof": "и подтверждаю, что являюсь медицинским работником. Я обязуюсь предоставить свою лицензию сейчас или позднее. Я не смогу работать с пациентами вплоть до момента предоставления такой информации.",
+    "reset_pass": "Введите адрес электронной почты, который вы использовали во время регистрации, а мы вышлем вам ссылку для сброса пароля.",
+    "specific_comments": "Если у вас есть замечания по поводу курса, пожалуйста, сообщите нам об этом, заполнив форму.",
+    "decided_by_following": "Следующий человек определяет возможность пересадки (ДА или НЕТ):",
+    "not_allowed": "НЕТ, Я НЕ РАЗРЕШАЮ трансплантацию ни одного из моих органов или тканей",
+    "exclude_some": "ДА, Я РАЗРЕШАЮ трансплантацию следующих органов или тканей:",
+    "include_some": "ДА, Я РАЗРЕШАЮ трансплантацию ТОЛЬКО следующего органа или ткан:",
+    "yes_to_all": "ДА, Я РАЗРЕШАЮ трансплантацию одного или нескольких органов или тканей после того, как врачи зафиксируют мою смерть",
+    "first_last_hos": "Первый и последний день\nнахождения в больнице",
+    "archive_entry_q": "Вы действительно хотите заархивировать эту запись",
+    "remove_this": "Вы действительно хотите удалить этот элемент?",
+    "cancel_this": "Вы действительно хотите отменить этот элемент?",
+    "are_u_sure": "Вы уверены, что хотите обновить этот запрос?",
+    "update_inquery": "Обновить запрос",
+    "dearchive_entry_q": "Вы действительно хотите разархивировать эту запись",
+    "delete_for_msg": "Вы действительно хотите удалить эту запись? После этого, она будет удалена навсегда",
+    "make_personilized_acc": "Чтобы настроить вашу учетную запись, добавьте фотографию своего профиля. Фотография будет видна только вам и людям из вашей группы."
   }
 }
