--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -661,13 +661,311 @@
 		"Youregisteredsuccessfully" :"Umesajiliwa kwa mafanikio",
 		"emailverification" : "Tafadhali angalia barua pepe yako kwa uthibitisho",
 		"Allentries" : "Ingizo zote huonekana kwa chaguo-msingi kwa wataalamu unaowapa ufikiaji wa wasifu wako. Unaweza kuhariri mipangilio hii kwa kuongeza kwenye kila kiingilio au weka sheria ya jumla katika faili yako ya",
-		"SelectPainArea" :"Select Pain Area",
-		"Temperature" :"Temperature",
-		"Fieldtitle" :"Field title",
-		"Download" :"Download",
-		"VeiwGraph" :"Veiw Graph",
-		"O2Saturation": "O2 Saturation",
-		"Whereyouarelocated" :"Where you are located"
+		"SelectPainArea" :"Chagua Eneo la Maumivu",
+		"Temperature" :"Joto",
+		"Fieldtitle" :"Kichwa cha uwanja",
+		"Download" :"Pakua",
+		"VeiwGraph" :"Tazama Grafu",
+		"O2Saturation": "Kueneza kwa O2",
+		"Whereyouarelocated" :"Ulipo",
 		
+
+		"timeline" : "Kalenda ya matukio",
+        "user" : "User",
+        "kituo" : "Kituo",
+        "ICD_11": "ICD-11",
+        "ICD_10_Who": "ICD-10 AMBAO",
+        "ICD_10_CM":"ICD-10 CM",
+        "ICD_10_GM":"ICD-10 GM",
+		"timeline_filters" : "Ratiba ya Filters",
+		"rate_this_course":"Kiwango cha kozi hii",
+		"ok_and_close":"Ok na Karibu",
+		"save_and_cont":"Kuokoa na kuendelea",
+        "clear_filters" : "Wazi filters",
+        "health_profile" : "Afya Profile",
+        "add_profile_pic":"Kuongeza Profile Picha",
+        "Creatinine":"Creatinine",
+        "add_data":"+Kuongeza data",
+        "no_document_avl":"Hakuna hati inapatikana",
+		"search_by_type_dr":"Tafuta kwa aina, daktari au hospitali",
+		"search_by_hos":"Utafutaji na Hospitali ya jina au ID",
+        "search_or_enter":"Search au kuingia",
+        "enter":"Kuingia",
+        "added_by":"Aliongeza kwa",
+        "images_files":"Picha & Files",
+        "pain_intensity":"Maumivu ya Kiwango",
+        "ICD_F32":"ICD: F32.0",
+        "filters":"Filters",
+        "Hba1c": "Hba1c(%)",
+        "warst_p_p":"Warst Maumivu Iwezekanavyo",
+        "very_severy":"Sana Severy",
+        "wastani":"Wastani",
+        "no_pain":"Hakuna Maumivu",
+		"condition_h_r_u":"Hali (Jinsi ni wewe?)",
+		"how_are_you":"jinsi ni wewe?",
+		"Enter_Diagnosis" : "Kuingia Utambuzi",
+		"Problem":"Tatizo",
+		"select_dates":"Chagua Tarehe",
+        "hurts_a_lot":"Machungu mengi",
+        "symp_notes":"Dalili & Maelezo",
+        "where_r_u_l":"Wapi ni wewe iko",
+        "confirm_diag":"Kuthibitisha utambuzi",
+        "travelled_to":"Alisafiri kwa",
+        "date_fo_visit":"Tarehe ya ziara",
+		"name_of_doc":"Jina la Daktari",
+		"add_picture":"+ Kuongeza picha",
+		"loadingref":"upakiaji...",
+		"enter_date": "Kuingia tarehe",
+		"lifelong":"Maisha",
+		"change_num":"Malipo ya simu",
+		"reminder_time": "Mawaidha wakati",
+		"add_another_remin":"kuongeza mwingine mawaidha",
+		"remove_reminder":"kuondoa mawaidha",
+		"to_be_token":"Kwa kuwa ishara untill",
+		"set_a_reminder": "Kuweka mawaidha",
+		"select_date":"Chagua tarehe",
+		"select_time":"wakati Kuchagua",
+		"add_attachment":"Kuongeza Attachment..",
+		"dob_relative":"Tarehe ya kuzaliwa (Jamaa)",
+		"add_dob_relative":"Kuongeza tarehe ya kifo (Jamaa)",
+		"hide_or_show": "Kuonyesha au Kujificha",
+		"set_date":"Kuweka tarehe",
+		"continue":"Endelea",
+		"pending_conf":"Inasubiri Uthibitisho",
+		"sent_requests":"Alimtuma Maombi",
+		"sent_request":"Alimtuma Ombi",
+		"new_inquiry":"uchunguzi Mpya",
+		"profile_id_pin":"Profile ID & PIN",
+		"inquiry_again":"Uchunguzi tena",
+		"graph_bp":"Graph-Shinikizo la Damu",
+		"graph_bs":"Graph-Damu Sukari",
+		"graph_hr":"Graph-Kiwango cha Moyo",
+		"graph_wb":"Graph-Uzito & Bmi",
+		"my_docs": "Hati Yangu",
+		"my_drs":"Madaktari Wangu",
+		"remove_ftd":"Kuondoa kutoka kuaminiwa daktari",
+		"dismiss":"Achana nayo",
+		"add_as_trusted":"Kuongeza kama kuaminiwa",
+		"add_successfully":"Aliongeza mafanikio",
+		"block_chain":"Blockchain Upatikanaji",
+		"terms":"Suala",
+		"insurance_comp":"Kampuni ya Bima",
+		"insurance_num":"Bima ya Idadi",
+		"street_address":"na Anwani ya Mitaani",
+		"privacy_policy":"Sera ya faragha",
+		"aimedis_online_cour":"Aimedis Kozi Online",
+		"tracker_self":"Trackers & Binafsi Data",
+		"settings": "Settings",
+		"organ_doner":"Chombo Wafadhili",
+		"right_mgnt":"Haki ya usimamizi",
+		"additional_settings":"Mazingira ya Ziada",
+		"blockchain_orgn_doner":"Blockchain salama chombo wafadhili",
+		"serach_pers_sick":"Search Prescrip. & Wagonjwa Certifi.",
+		"set_default_date_time":"Kuweka default date & wakati format",
+		"two_fac_auth_enable": "2-sababu uthibitishaji ni kuwezeshwa",
+		"disable_2_factor":"Afya ya 2-sababu uthibitishaji",
+		"enable_2_factor":"Kuwawezesha 2-sababu uthibitishaji",
+		"appVersion":"Programu version 1.0",
+		"aimedisInc":"Aimedis Inc.",
+		"do_want_disconn":"Je, unataka kukatwa",
+		"tracker_data":"Tracker & Binafsi Data",
+		"tracker_devices":"Tracker & Vifaa",
+		"connected":"shikamana",
+		"times": "mara",
+		"last_on":"Mwisho juu ya",
+		"welcome_back":"Kuwakaribisha nyuma,",
+		"country_of_insu":"Nchi ya bima",
+		"details_fitbit":"Fitbit Maelezo",
+		"health_status": "Hali ya Afya",
+		"contact_other":"Kuwasiliana & info Nyingine",
+		"no_medication":"Hakuna dawa",
+		"no_allergies":"Hakuna allergy",
+		"no_diagnoses":"Hakuna diagnoser",
+		"free_remarks":"Free hotuba",
+		"relation": "Uhusiano",
+		"nurology":"Nurology",
+		"no_data_yet":"Hakuna Data bado",
+		"alithibitisha":"Alithibitisha",
+		"emergency_cont":"Dharura ya Mawasiliano",
+		"ent_medicat":"Ndani ya Dawa",
+		"heart_frequency":"Moyo Frequency",
+		"grafu":"Grafu",
+		"consultancy":"Ushauri",
+		"online_appo":"Online Uteuzi",
+		"cancel_my_app":"Kufuta uteuzi wangu",
+		"cancel_appoint":"Kufuta Uteuzi",
+		"calender_view":"Kalenda View",
+		"past_appointments":"Zamani Uteuzi",
+		"select_spec":"Kuchagua maalum",
+		"appoint_type":"Uteuzi aina",
+		"select_a_specialist":"Kuchagua mtaalamu",
+		"we_are_near":"Sisi ni kuonyesha mtaalamu wako wa karibu",
+		"km_range":"km mbalimbali",
+		"certificate": "Cheti",
+		"yes":"Ndiyo",
+		"no":"Hakuna",
+		"cart":"rukwama",
+		"pay":"lipa",
+		"unable_to_update":"Hawawezi update",
+		"enter_your_pass":"Ingiza Password yako",
+		"payment_unsuccess":"Malipo unsccuessfull",
+		"ordered_unsuccess":"Orderd Mafanikio.",
+		"ordered_cant":"Amri ya Hawezi kuwa nafasi bado!",
+		"dont_have_acc":"Je, si kuwa na akaunti?",
+		"type_a_msg":"Aina ya ujumbe..",
+		"back_to_screen":"Nyuma ya screen login",
+		"verify_email":"Tafadhali kuthibitisha yako \nE-mail anwani",
+		"aimedis_link":"Kama kuna Aimedis akaunti wanaohusishwa na\n",
+		"email_reset":"barua pepe, tutaweza kutuma zaidi ya miaka \ninstructions upya password yako.",
+		"we_sent_email":"Sisi alimtuma ukaguzi barua pepe\n",
+		"click_the_link":". Bonyeza kiungo katika\n barua pepe na kupata kuanza!",
+		"click_here":"Bonyeza Hapa",
+		"unable_open_please":"Hawawezi kufungua. Tafadhali kufungua manually",
+		"open_default":"Fungua Email default ya programu",
+		"did_nt_get":"Hakuwa na kupata barua pepe ya uthibitisho?",
+		"lectures":"mihadhara",
+		"book_v_call":"Kitabu Video wito",
+		"book_o_visit":"Kitabu ofisi tembelea",
+		"book_consultancy":"Kitabu Ushauri",
+		"select_time_from":"Chagua muda(kutoka)",
+		"select_time_to":"Chagua Muda(kwa)",
+		"detail_ques":"Undani/Swali",
+		"All":"Wote",
+		"char_8":"8 Wahusika",
+		"lettr_1":"1 barua",
+		"number_1":"1 idadi",
+		"spl_char_1":"tabia maalum 1",
+		"enter_mob_num":"Kuingia namba ya simu",
+		"enter_msg":"Kuingia Ujumbe",
+		"network_error":"hitilafu ya Mtandao",
+		"forgotten_pass":"Wamesahau password",
+		"choose_file":"Chagua Faili",
+		"continue_watch":"Kuendelea kuangalia",
+		"start_learning":"Kuanza kujifunza",
+		"remove_from_cart":"Kuondoa kwa rukwama",
+		"checkout":"Kutoka",
+		"wishlist":"Wishlist",
+		"excellent":"Bora",
+		"very_good":"nzuri Sana",
+		"Good":"Vizuri",
+		"fair":"Haki",
+		"Poor":"Vibaya",
+		"audio":"Sauti",
+		"blocked_users":"Blocked Watumiaji",
+		"actions":"Matendo",
+		"Sending":"Kutuma",
+		"unblock":"Kufungulia",
+		"contacts":"Mawasiliano",
+		"has_file":" alimtuma faili. Kushusha ni hapa: ",
+		"you_deleted":"Wewe ilifutwa ujumbe huu",
+		"incoming_call":"Zinazoingia wito",
+		"outgoing_call":"wito anayemaliza muda wake",
+		"ok":"OK",
+		"english":"kiingereza",
+		"german":"kijerumani",
+		"swahili":"Kiswahili",
+		"your_rating":"Rating Yako",
+		"leave_rating":"Kuondoka rating",
+		"error_in_license":"Hitilafu katika leseni upload",
+		"call_by":"wito kwa",
+		"call_initiated":"Wito Ulioanzishwa",
+		"call_ongoing":"Wito Unaoendelea",
+		"call_unanswered":"Wito Unanswered",
+		"call_rejected":"Wito Kukataliwa",
+		"call_busy":"Wito Busy",
+		"call_cancelled":"Wito wa Kufutwa",
+		"call_ended":"Wito wa Kumalizika",
+		"cant_chat":"je, si kuzungumza sasa hivi",
+		"heck_it_later":"mimi itabidi heck baadaye",
+		"unable_retrive":"Hawawezi retrive mazungumzo ",
+		"you_just_sent":"Tu wewe alimtuma ",
+		"you_recieve":"Wewe kupokea ",
+		"call_is":"Wito ni",
+		"hati":"Hati",
+		"image":"Picha",
+		"nk":"nk.",
+		"maadili":"Maadili",
+		"added_in_cart":"Aliongeza kwa gari.",
+		"already_in_cart":"bila Shaka Tayari katika gari yako.",
+		"click_here_upload":"Bonyeza hapa kwa upload leseni yako",
+		"not_now":"Si Sasa",
+		"reset_passwrd":"Rudisha Password",
+		"register_new_acc":"Kusajili akaunti mpya",
+		"you_r_blocked":"Yako ni imefungwa,Tafadhali connet kwa Aimedis timu",
+		"blocked":"Imefungwa!",
+		"turn_on":"Kurejea Kwenye",
+		"login_suceess":"Login Mafanikio",
+		"select_acc_type":"Kuchagua aina ya akaunti",
+		"i_m_a":"mimi ni",
+		"update_entry":"Mwisho Kuingia",
+		"notisi":"Kuarifiwa",
+		"something_wrong":"Kitu potoka",
+		"added_to_plist":"Aliongeza kwa patientlist",
+		"please_select_rating":"Tafadhali chagua rating.",
+		"cancel_s_o":"Kufuta Pili Openion",
+		"enter_your_name":"Kuingia yako jina",
+		"error_in_p_u":"Hitilafu katika profile update juu ya Mazungumzo",
+		"enter_your_email":"Kuingia yako E-mail Anwani",
+		"your_app_calender":"uteuzi Wako katika kalenda view",
+		"no_time_slot":"Hakuna wakati yanayopangwa ni Avilable kwa ajili ya tarehe hii",
+		"going_offline":"amana, pesa, vifaa anaenda offline",
+		"you_will_get":"Wewe kupata updates wakati wa matukio muhimu kutokea, kama",
+		"by_clicking":"Kwa kujenga akaunti, mimi kukubaliana na",
+		"term_of_use":" Masharti ya Matumizi",
+		"two_days_ago":"siku 2 iliyopita",
+		"three_to_6_days_ago":"3-6 siku iliyopita",
+		"updated_track":"Updated kufuatilia",
+		"added_success":"Aliongeza kwa mafanikio...",
+		"sick_cert_found":"Wagonjwa cheti data kupatikana",
+		"sick_cert_not_found":"Wagonjwa cheti data si kupatikana",
+		"pre_data_found":"Dawa data kupatikana",
+		"error_getting_token":"hitilafu katika kupata ishara",
+		"error_in_track":"hitilafu katika kupata kufuatilia",
+		"pre_data_not_found":"Dawa data si kupatikana",
+		"sick_doc_found":"Wagonjwa cheti cha daktari data kupatikana",
+		"sick_doc_not_found":"Wagonjwa cheti cha daktari data si kupatikana",
+		"pre_doc_found":"Dawa daktari data kupatikana",
+		"pre_doc_not_found":"Dawa daktari data si kupatikana",
+		"error_network_conn":"kosa katika uhusiano wa mtandao",
+		"select_aimedis_dr":"Tafadhali chagua Aimedis Daktari.",
+		"Dr_added_to_fav_list":"Daktari aliongeza kwa orodha favorite.",
+		"please_check_net_conn":"Tafadhali angalia uhusiano wa mtandao",
+		"rating_added_to_course":"Rating aliongeza kwa shaka.",
+		"remove_to_wish":"bila Shaka Kuondoa wishlist.",
+		"added_to_wish":"Aliongeza kwa wishlist.",
+		"remove_in_wishlist":"bila Shaka Kuondoa wishlist.",
+		"two_step_verification":"Kuingia yako uthibitishaji wa hatua 2 kanuni",
+		"verification_code":"uthibitishaji wa hatua 2 kanuni",
+		"unavailable_2":"2FA hazipatikani?",
+		"Remarks":"Matamshi",
+		"remove_second_op":"Kuondoa Maoni ya Pili",
+		"not_an_organ":"Si chombo wafadhili",
+		"family_dr_added":"Daktari wa Familia aliongeza",
+		"plz_selct_pdf":"Tafadhali chagua tu pdf, jpg, png aina ya faili.",
+		"agree_on":"Tafadhali kukubaliana juu ya masharti yetu na masharti",
+		"all_required":"Yote ya shamba ni required.",
+		"password_up":"Password imesasishwa",
+		"select_lang":"Chagua lugha",
+		"exit_amedis":"Exit Aimedis",
+		"want_to_exit":"Je, unataka kutoka?",
+		"fcm_msg_arr":"mpya FCM ujumbe umefika!",
+		"upload_a_photo":"Pakia picha yako kwa Kadi ya bima ya afya",
+		"im_medical_prof":"na mimi kuthibitisha mimi ni mtaalamu wa matibabu. Mimi kutoa ushahidi wa leseni yangu ya mazoezi, ambayo mimi kupakia sasa au kutoa yao ya baadaye. Kabla ya mimi wala kutoa kwamba ushahidi siwezi kuungana na wagonjwa.",
+		"reset_pass":"Kuingia anwani ya barua pepe wewe kusajiliwa na na sisi kutuma kiungo kwa upya password yako.",
+		"specific_comments":"Kama una maoni maalum juu ya bila shaka, tafadhali hebu kujua kwa kujaza fomu ya.",
+		"decided_by_following":"NDIYO au HAPANA yataamuliwa kwa kufuata mtu",
+		"not_allowed":"HAPANA, mimi SI kuruhusu transplantation ya yoyote ya yangu ya viungo au tishu",
+		"exclude_some":"NDIYO, mimi kuruhusu hii kukubali kwa kufuatia chombo / tishu:",
+		"include_some":"NDIYO, mimi kuruhusu hii tu kwa ajili ya zifuatazo chombo / tishu:",
+		"yes_to_all":"NDIYO, mimi kwayo kukubaliana na transplantation ya moja au zaidi ya chombo / tishu ya mgodi baada ya madaktari hutamkwa mimi wafu",
+		"first_last_hos":"Kwanza & siku ya mwisho\nof hospitali tembelea",
+		"archive_entry_q":"Je, kweli unataka archive kuingia hii",
+		"remove_this":"Je, kweli unataka kuondoa hii?",
+		"cancel_this":"Je, kweli unataka kufuta hii?",
+		"are_u_sure":"Je, wewe na uhakika wa update hii Uchunguzi?",
+		"update_inquery":"Update inquery",
+		"dearchive_entry_q":"Je, kweli unataka dearchive kuingia hii",
+		"delete_for_msg":"Je, kweli unataka Kufuta kuingia hii? Hii ina maana itakuwa kufuta milele",
+		"make_personilized_acc":"kufanya akaunti yako zaidi msako, kuongeza picha yako profile. Itakuwa tu kuwa wazi kwa wewe na watu katika kundi lako."
 	}
 }
