--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -648,27 +648,327 @@
 		"Prescriptionisdeleted" : "Se elimina la receta",
 		"Prescriptionisarchived" : "La receta está archivada",
 		"Prescriptionishandedtopatient" : "La receta se entrega al paciente",
-		"Addcompany" :"Add another insurance company", 
-		"Selectentrytype" : "Select entry type",
-		"addtextentry" : "add text entry",
-		"BodySchemeNotes" :"Body Scheme Notes",
-		"Conditions" : "Condition (How are you?)",
-		"requesteddoctor" : "has requested to become a trusted doctor",
-		"accpetRemove" : "Please check this for accept and remove.",
-		"pain" : "Pain",
-		"Mild" : "Mild", 
-		"Moderate" : "Moderate", 
-		"Servere" : "Severe",
-		"RegisteredSuccessfully" : "Registered Successfully",
-		"Youregisteredsuccessfully" :"You are registered successfully",
-		"emailverification" : "Please check your email for verification",
-		"Allentries" : "All entries are by default visible to professionals you give access to your profile. You can edit these settings additionally on each entry or set a general rule in your",
-		"SelectPainArea" :"Select Pain Area",
-		"Temperature" :"Temperature",
-		"Fieldtitle" :"Field title",
-		"Download" :"Download",
-		"VeiwGraph" :"Veiw Graph",
-		"O2Saturation": "O2 Saturation",
-		"Whereyouarelocated" :"Where you are located"
+		"Addcompany" :"Donde estas ubicado", 
+		"Selectentrytype" : "Seleccionar tipo de entrada",
+		"addtextentry" : "agregar entrada de texto",
+		"BodySchemeNotes" :"Notas sobre el esquema corporal",
+		"Conditions" : "Condición (¿Cómo estás?)",
+		"requesteddoctor" : "ha solicitado convertirse en un médico de confianza",
+		"accpetRemove" : "Marque esto para aceptar y eliminar.",
+		"pain" : "Dolor",
+		"Mild" : "Leve", 
+		"Moderate" : "Moderada", 
+		"Servere" : "Severa",
+		"RegisteredSuccessfully" : "Registrado correctamente",
+		"Youregisteredsuccessfully" :"Estás registrado correctamente",
+		"emailverification" : "Por favor revise su correo electrónico para verificación",
+		"Allentries" : "Todas las entradas están visibles de forma predeterminada para los profesionales a los que da acceso a su perfil. Puede editar estas configuraciones adicionalmente en cada entrada o establecer una regla general en su",
+		"SelectPainArea" :"Seleccionar zona de dolor",
+		"Temperature" :"Temperatura",
+		"Fieldtitle" :"Título del campo",
+		"Download" :"Descargar",
+		"VeiwGraph" :"Ver gráfico",
+		"O2Saturation": "Saturación de O2",
+		"Whereyouarelocated" :"Donde estas ubicado",
+
+
+		"timeline" : "Líneas de Tiempo",
+        "user" : "Usuario",
+        "facility" : "Institución",
+        "ICD_11": "ICD-11",
+        "ICD_10_Who": "ICD-10 WHO",
+        "ICD_10_CM":"ICD-10 CM",
+        "ICD_10_GM":"ICD-10 GM",
+		"timeline_filters" : "Filtros de la Líneas de Tiempo",
+		"rate_this_course":"Valorar este curso",
+		"ok_and_close":"Aceptar y Cerrar",
+		"save_and_cont":"Guardar y continuar",
+        "clear_filters" : "Eliminar filtros",
+        "health_profile" : "Perfil de Salud",
+        "add_profile_pic":"Agregar Foto de Perfil",
+        "Creatinine":"Creatinina",
+        "add_data":"+Adicionar dato",
+        "no_document_avl":"No hay documento disponible",
+		"search_by_type_dr":"Buscar por tipo, médico o Institución",
+		"search_by_hos":"Buscar por nombre del Hospital o ID",
+        "search_or_enter":"Buscar o Ingresar",
+        "enter":"Ingresar",
+        "added_by":"Añadido por",
+        "images_files":"Imágenes y Archivos",
+        "pain_intensity":"Intensidad del Dolor",
+        "ICD_F32":"ICD: F32.0",
+        "filters":"Filtros",
+        "Hba1c": "Hba1c(%)",
+        "warst_p_p":"El Peor Dolor Posible",
+        "very_severy":"Muy Severo",
+        "moderate":"Moderado",
+        "no_pain":"Sin Dolor",
+		"condition_h_r_u":"Condición (¿Cómo está?)",
+		"how_are_you":"¿Cómo estás?",
+		"Enter_Diagnosis" : "Ingresar diagnóstico",
+		"Problem":"Problema",
+		"select_dates":"Seleccionar Fechas",
+        "hurts_a_lot":"Duele mucho",
+        "symp_notes":"Síntomas y Notas",
+        "where_r_u_l":"Dónde están ubicados",
+        "confirm_diag":"Confirmar diagnóstico",
+        "travelled_to":"Viajar a",
+        "date_fo_visit":"Fecha de visita",
+		"name_of_doc":"Nombre del Médico",
+		"add_picture":"+ Adicionar Foto",
+		"loadingref":"cargando...",
+		"enter_date": "Ingresar Fecha",
+		"lifelong":"De por vida",
+		"change_num":"Número de cobranza",
+		"reminder_time": "Recordar Hora",
+		"add_another_remin":"agregar otro recordatorio",
+		"remove_reminder":"eliminar recordatorio",
+		"to_be_token":"Para ser tomado hasta",
+		"set_a_reminder": "Establecer un recordatorio",
+		"select_date":"Seleccionar fecha",
+		"select_time":"Seleccionar hora",
+		"add_attachment":"Addicionar Anexo.",
+		"dob_relative":"Fecha de Nacimiento (Pariente)",
+		"add_dob_relative":"Adicionar fecha de fallecimiento (Pariente)",
+		"hide_or_show": "Mostrar o Esconder",
+		"set_date":"Establecer una fecha",
+		"continue":"Continuar",
+		"pending_conf":"Confirmación Pendiente",
+		"sent_requests":"Solicitudes enviadas",
+		"sent_request":"Solicitud enviada",
+		"new_inquiry":"Nueva Consulta",
+		"profile_id_pin":"ID de Perfil y PIN",
+		"inquiry_again":"Consultar de nuevo",
+		"graph_bp":"Gráfico de Presión Arterial",
+		"graph_bs":"Gráfico de Azúcar en Sangre",
+		"graph_hr":"Gráfico de Frecuencia Cardíaca",
+		"graph_wb":"Gráfico de Peso y IMC",
+		"my_docs": "Mi Documento",
+		"my_drs":"Mis Médicos",
+		"remove_ftd":"Eliminar de médico de confianza",
+		"dismiss":"Descartar",
+		"add_as_trusted":"Agregar como de confianza",
+		"add_successfully":"Agregado correctamente",
+		"block_chain":"Acceso a Blockchain",
+		"terms":"Términos",
+		"insurance_comp":"Compañía de Seguros",
+		"insurance_num":"Numero de Seguro",
+		"street_address":"Dirección",
+		"privacy_policy":"Políticas de Privacidad",
+		"aimedis_online_cour":"Cursos en Línea de Aimedis",
+		"tracker_self":"Rastreadores y Datos Personales",
+		"settings": "Ajustes",
+		"organ_doner":"Donante de Órganos",
+		"right_mgnt":"Gestión Correcta",
+		"additional_settings":"Ajustes Adicionales",
+		"blockchain_orgn_doner":"Donantes de órganos seguros Blockchain",
+		"serach_pers_sick":"Búsqueda de Prescripciones y Justificativo Médico",
+		"set_default_date_time":"Establecer el formato de fecha y hora predeterminado",
+		"two_fac_auth_enable": "La autenticación de 2 factores está habilitada",
+		"disable_2_factor":"Deshabilitar la autenticación de 2 factores",
+		"enable_2_factor":"Habilitar la autenticación de 2 factores",
+		"appVersion":"App version 1.0",
+		"aimedisInc":"Aimedis Inc.",
+		"do_want_disconn":"¿Desea desconectarse?",
+		"tracker_data":"Rastreador y Datos Personales",
+		"tracker_devices":"Rastreador y Dispositivos",
+		"connected":"Conectado",
+		"times": "Horas",
+		"last_on":"Última en",
+		"welcome_back":"Bienvenido nuevamente,",
+		"country_of_insu":"País de seguro",
+		"details_fitbit":"Detalles de Fitbit",
+		"health_status": "Estado de Salud",
+		"contact_other":"Información de contacto y otras",
+		"no_medication":"Sin medicamentos",
+		"no_allergies":"Sin alergias",
+		"no_diagnoses":"Sin diagnóstico",
+		"free_remarks":"Comentarios libres",
+		"relation": "Relación",
+		"nurology":"Neurología",
+		"no_data_yet":"Aún no hay Datos",
+		"confirmed":"Confirmado",
+		"emergency_cont":"Contacto de Emergencia",
+		"ent_medicat":"Medicación Interna",
+		"heart_frequency":"Frecuencia Cardiaca",
+		"graphs":"Gráficos",
+		"consultancy":"Consultoría",
+		"online_appo":"Cita en Línea",
+		"cancel_my_app":"Cancelar mis citas",
+		"cancel_appoint":"Cancelar Citas",
+		"calender_view":"Ver Calendario",
+		"past_appointments":"Citas anteriores",
+		"select_spec":"Seleccionar especialidad",
+		"appoint_type":"Tipo de Cita",
+		"select_a_specialist":"Seleccionar un especialista",
+		"we_are_near":"Le mostramos a su especialista cerca de usted",
+		"km_range":"Rango de km ",
+		"certificate": "Certificado",
+		"yes":"YSí",
+		"no":"No",
+		"cart":"Carrito",
+		"pay":"Pagar",
+		"unable_to_update":"No se puede actualizar",
+		"enter_your_pass":"Ingrese su Contraseña",
+		"payment_unsuccess":"Pago fallido",
+		"ordered_unsuccess":"Pedido Correctamente Realizado.",
+		"ordered_cant":"¡Aún no se puede realizar el pedido!!",
+		"dont_have_acc":"¿No tiene una cuenta?",
+		"type_a_msg":"Escriba una mensaje...",
+		"back_to_screen":"Volver a la pantalla de inicio de sesión",
+		"verify_email":"Verifique su \ndirección de correo electrónico",
+		"aimedis_link":"Si hay una cuenta de Aimedis vinculada a\n",
+		"email_reset":"correo electrónico, le enviaremos \ninstrucciones para restablecer su contraseña.",
+		"we_sent_email":"Enviamos un correo electrónico de verificación a\n",
+		"click_the_link":". Haga clic en el enlace del\n correo electrónico para comenzar.",
+		"click_here":"Haga Clic Aquí",
+		"unable_open_please":"No se puede abrir. Por favor, ábralo manualmente",
+		"open_default":"Abrir la app de correo electrónico predeterminada",
+		"did_nt_get":"¿No recibió la verificación por correo electrónico?",
+		"lectures":"conferencias",
+		"book_v_call":"Reservar Videollamada",
+		"book_o_visit":"Reservar visita al consultorio",
+		"book_consultancy":"Reservar Consulta",
+		"select_time_from":"Seleccionar hora (desde)",
+		"select_time_to":"Seleccionar hora (hasta)",
+		"detail_ques":"Detalle/Pregunta",
+		"all":"Todas",
+		"char_8":"8 Caracteres",
+		"lettr_1":"1 letra",
+		"number_1":"1 número",
+		"spl_char_1":"1 caracter especial",
+		"enter_mob_num":"Ingrese el número de celular",
+		"enter_msg":"Ingrese Mensaje",
+		"network_error":"Error de red",
+		"forgotten_pass":"Olvide contraseña",
+		"choose_file":"Escoger Archivo",
+		"continue_watch":"Continuar viendo",
+		"start_learning":"Comienza a aprender",
+		"remove_from_cart":"Eliminar del Carrito",
+		"checkout":"Salida",
+		"wishlist":"Lista de Deseos",
+		"excellent":"Excelente",
+		"very_good":"Muy bien",
+		"good":"Bien",
+		"fair":"Justo",
+		"poor":"Malo",
+		"audio":"Audio",
+		"blocked_users":"Usuarios Bloqueados",
+		"actions":"Acciones",
+		"sending":"Enviando",
+		"unblock":"Desbloquear",
+		"contacts":"Contactos",
+		"has_file":" le ha enviado un archivo. Descárguelo aquí: ",
+		"you_deleted":"Borró este mensaje",
+		"incoming_call":"Llamada entrante",
+		"outgoing_call":"Llamada saliente",
+		"ok":"Bien",
+		"english":"Inglés",
+		"german":"Alemán",
+		"swahili":"Swahili",
+		"your_rating":"Su Calificación",
+		"leave_rating":"Dejar una Calificación",
+		"error_in_license":"Error al cargar la licencia",
+		"call_by":"llamar por",
+		"call_initiated":"Llamada Iniciada",
+		"call_ongoing":"Llamada en Curso",
+		"call_unanswered":"Llamada Sin Respuesta",
+		"call_rejected":"Llamada Rechazada",
+		"call_busy":"Llamada Ocupada",
+		"call_cancelled":"Llamada Cancelada",
+		"call_ended":"Llamada Finalizada",
+		"cant_chat":"no puedo chatear ahora",
+		"heck_it_later":"lo haré más tarde",
+		"unable_retrive":"No se pudo recuperar la conversación ",
+		"you_just_sent":"Solo envió un ",
+		"you_recieve":"Recibió un ",
+		"call_is":"La llamada es",
+		"document":"Documento",
+		"image":"Imagen",
+		"etc":"etc.",
+		"values":"Valores",
+		"added_in_cart":"Añadido al carrito.",
+		"already_in_cart":"Por supuesto. Ya en su carrito.",
+		"click_here_upload":"Haga clic aquí para cargar su licencia",
+		"not_now":"Ahora No",
+		"reset_passwrd":"Restablecer Contraseña",
+		"register_new_acc":"Registrar cuenta nueva",
+		"you_r_blocked":"Está bloqueado. Por favor conéctese al equipo de Aimedis",
+		"blocked":"¡Bloqueado!",
+		"turn_on":"Conectar",
+		"login_suceess":"Inicio de Sesión Exitoso",
+		"select_acc_type":"Seleccione el tipo de cuenta",
+		"i_m_a":"soy un",
+		"update_entry":"Actualizar Entrada",
+		"notifications":"Notificaciones",
+		"something_wrong":"Algo Anda Mal",
+		"added_to_plist":"Añadido a la lista de pacientes",
+		"please_select_rating":"Por favor, seleccione calificación.",
+		"cancel_s_o":"Cancelar Segunda Opinión",
+		"enter_your_name":"Ingrese su nombre",
+		"error_in_p_u":"Error en la actualización del perfil en el Chat",
+		"enter_your_email":"Ingrese su Dirección de Correo Electrónico",
+		"your_app_calender":"Su cita en el calendario",
+		"no_time_slot":"No hay hora disponible para esta fecha",
+		"going_offline":"depósitos, retiros, dispositivos desconectados",
+		"you_will_get":"Recibirá actualizaciones cuando sucedan eventos importantes, como",
+		"by_clicking":"Al crear una cuenta, acepto los",
+		"term_of_use":" Términos de Uso",
+		"two_days_ago":"2 días antes",
+		"three_to_6_days_ago":"de 3 a 6 días antes",
+		"Pharmacist":"farmacéutico",
+		"updated_track":"Pista actualizada",
+		"added_success":"Adicionado correctamente...",
+		"sick_cert_found":"Se encontraron datos de justificante médico",
+		"sick_cert_not_found":"No se encontraron datos de justificante médico",
+		"pre_data_found":"Se encontraron datos de la prescripción",
+		"error_getting_token":"error al obtener el token",
+		"error_in_track":"error al obtener seguimiento",
+		"pre_data_not_found":"No se encontraron datos de prescripción",
+		"sick_doc_found":"Se encontraron datos del médico del justificante médico",
+		"sick_doc_not_found":"No se encontraron datos del médico del justificante médico",
+		"pre_doc_found":"Se encontraron datos del médico de hizo la prescripción",
+		"pre_doc_not_found":"No se encontraron datos del médico de hizo la prescripción",
+		"error_network_conn":"error en la conexión de red",
+		"select_aimedis_dr":"Por favor, seleccione un Médico de Aimedis .",
+		"Dr_added_to_fav_list":"Médico agregado a la lista de favoritos.",
+		"please_check_net_conn":"Por favor, compruebe la conexión de red",
+		"rating_added_to_course":"Calificación agregada al curso.",
+		"remove_to_wish":"Por supuesto. Retirar de la lista de deseos.",
+		"added_to_wish":"Añadido a la lista de deseos.",
+		"remove_in_wishlist":"Por supuesto. Retirar de la lista de deseos.",
+		"two_step_verification":"Ingrese su código de verificación de 2 pasos",
+		"verification_code":"Código de Verificación de 2 Pasos",
+		"unavailable_2":"¿2FA indisponible??",
+		"Remarks":"Observaciones",
+		"remove_second_op":"Eliminar Segunda Opinión",
+		"not_an_organ":"No es donante de órganos",
+		"family_dr_added":"Médico de familia agregado",
+		"plz_selct_pdf":"Por favor, seleccione solo los tipos de archivo pdf, jpg, png.",
+		"agree_on":"Por favor, acepte nuestros términos y condiciones",
+		"all_required":"Todos los campos son obligatorios.",
+		"password_up":"Contraseña actualiza",
+		"select_lang":"Seleccione el idioma",
+		"exit_amedis":"Salir de Aimedis",
+		"want_to_exit":"¿Desea salir?",
+		"fcm_msg_arr":"¡Llegó un nuevo mensaje de FCM!",
+		"upload_a_photo":"Cargue una foto de su tarjeta de seguro médico",
+		"im_medical_prof":"y confirmo que soy un profesional médico. Tengo que proporcionar una prueba de mi licencia de práctica, que subo ahora o la proporciono más tarde. Antes de que no proporcione esa prueba, no puedo conectarme con los pacientes.",
+		"reset_pass":"Ingrese la dirección de correo electrónico con la que se registró y le enviaremos un enlace para restablecer su contraseña.",
+		"specific_comments":"Si tiene comentarios específicos sobre el curso, háganoslo saber llenando el formulario.",
+		"decided_by_following":"SÍ o NO será decidido por la siguiente persona",
+		"not_allowed":"NO, NO permito el trasplante de ninguno de mis órganos o tejidos",
+		"exclude_some":"SÍ, lo acepto para los siguientes órganos o tejidos:",
+		"include_some":"SÍ, lo permito solo para los siguientes órganos o tejidos::",
+		"yes_to_all":"SÍ, por la presente acepto el trasplante de uno o más de mis órganos o tejidos después de que los médicos me hayan declarado muerto",
+		"first_last_hos":"Primer y último día \n de visita al hospital",
+		"archive_entry_q":"¿De verdad quieres archivar esta entrada?",
+		"remove_this":"¿Realmente quieres eliminar esto?",
+		"cancel_this":"¿De verdad quieres cancelar esto?",
+		"are_u_sure":"¿Estás seguro de actualizar esta consulta?",
+		"update_inquery":"Actualizar la consulta",
+		"dearchive_entry_q":"¿Realmente desea desarchivar esta entrada?",
+		"delete_for_msg":"¿Realmente desea eliminar esta entrada? Esto significa que se eliminará para siempre.",
+		"make_personilized_acc":"Para personalizar su cuenta, agregue su foto de perfil. Solo será visible para usted y las personas de su grupo."
 	}
 }
